abort release on uncommited changes
git-svn-id: https://chat-color-sync.googlecode.com/svn/trunk@8 1681d740-43cd-11de-b466-9154fc769079

--- a/ChatColorSync/Makefile
+++ b/ChatColorSync/Makefile
@@ -10,6 +10,7 @@ tag: clean
 	cvs tag ChatColorSync-$(VERSION)
 
 release: clean
+	CHANGES=`svn st`; if [ -n "$$CHANGES" ]; then echo "### uncommited changes";  false; fi
 	( cd ..;							\
 		rm -f ChatColorSync-$(VERSION).zip;			\
 		find ChatColorSync					\
